[package]
name = "matheriser"
version = "0.2.0"
authors = ["akkuankka <cwmckenzie02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
num = "0.4.0"
colored = "2"
ron = "0.6.4"
serde = "1"
structopt = "0.3.21"
dialoguer = "0.8.0"
directories = "3.0.2"

[dev-dependencies]
rand = "0.8.3"
